fixed the second snippet

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
 <script>
   if(window.location.href = "https://jordan-milner.github.io/angular-realworld-example-app/login"){
+    console.log(window.location.href);
     (function(apiKey){
       (function(p,e,n,d,o){var v,w,x,y,z;o=p[d]=p[d]||{};o._q=[];
         v=['initialize','identify','updateOptions','pageLoad'];for(w=0,x=v.length;w<x;++w)(function(m){
@@ -79,7 +80,6 @@
           // You can add any additional account level key-values here,
           // as long as it's not one of the above reserved names.
         }
-        disableGuides: true
       });
     })('d9e30fcc-6ddc-48bd-7843-8bce634e1b8a'); 
   }
