--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 
 <script>
-  if(window.location.href = "https://jordan-milner.github.io/angular-realworld-example-app/login"){
+  if(window.location.href == "https://jordan-milner.github.io/angular-realworld-example-app/login"){
     console.log(window.location.href);
     (function(apiKey){
       (function(p,e,n,d,o){var v,w,x,y,z;o=p[d]=p[d]||{};o._q=[];
