--- a/404.html
+++ b/404.html
@@ -44,7 +44,8 @@
 
         // You can add any additional account level key-values here,
         // as long as it's not one of the above reserved names.
-      }
+      },
+      disableGuides: true,
     });
   })('d9e30fcc-6ddc-48bd-7843-8bce634e1b8a');
 </script>
