improve lighthouse scores

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,8 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="Description" content="Angular realworld example">
   <title>Conduit</title>
   <base href="/">
 
