--- a/index.html
+++ b/index.html
@@ -1,21 +1,19 @@
 <!doctype html>
 <html>
-
 <head>
   <meta charset="utf-8">
   <title>Conduit</title>
-  <base href="/">
-
+  <base href="https://jordan-milner.github.io/angular-realworld-example-app/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" type="text/css">
   <link href="//fonts.googleapis.com/css?family=Titillium+Web:700|Source+Serif+Pro:400,700|Merriweather+Sans:400,700|Source+Sans+Pro:400,300,600,700,300italic,400italic,600italic,700italic" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="//demo.productionready.io/main.css">
 
-</head>
-
+<link rel="stylesheet" href="styles.34c57ab7888ec1573f9c.css"></head>
 <body>
   <app-root>Loading...</app-root>
-</body>
+<script type="text/javascript" src="runtime.9c71f4baf75d5a9a2e77.js"></script><script type="text/javascript" src="polyfills.74c949fb901fde2a61b1.js"></script><script type="text/javascript" src="main.f3d8bb64fb27f07f3590.js"></script></body>
+
 
 
 <script>
