--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       pendo.updateSecondaryHomeViewBadge();
     }
 
-    var alerts = [{
+    pendo.alerts = [{
       type: "critical",
       info: "this is the alert info",
     }]
