--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         //initializing number of alerts set to 0 for now
         pendo.alerts = 0;
         // once Pendo is ready we add a mutation listener to keep track of what Pendo is doing
-        pendo.addRCMutationListener();
+        pendo.addBodyMutationListener();
       }
     }
   });
