--- a/src/404.html
+++ b/src/404.html
@@ -1,17 +1,12 @@
-<!doctype html>
-<html>
-<head>
+<!DOCTYPE html><html lang="en"><head>
   <meta charset="utf-8">
-  <title>Conduit</title>
-  <base href="/">
-
+  <title>nothingjustangular</title>
+  <base href="https://Akilarasup.github.io/angularnew/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" type="text/css">
-  <link href="//fonts.googleapis.com/css?family=Titillium+Web:700|Source+Serif+Pro:400,700|Merriweather+Sans:400,700|Source+Sans+Pro:400,300,600,700,300italic,400italic,600italic,700italic" rel="stylesheet" type="text/css">
-  <link rel="stylesheet" href="//demo.productionready.io/main.css">
-
-</head>
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+<link rel="stylesheet" href="styles.ef46db3751d8e999.css"></head>
 <body>
-  <app-root>successful deployment</app-root>
-</body>
-</html>
+  <app-root></app-root>
+<script src="runtime.e927bcf2431f512b.js" type="module"></script><script src="polyfills.54635cde3af6e618.js" type="module"></script><script src="main.f0b98c6695312696.js" type="module"></script>
+
+</body></html>
