--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Tanmay test site by jonathan</title>
+    <title>Tanmay loves cricket</title>
     <base href="/" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
